# youtube-thumbnail-generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
src/: cli.rs  errors.rs  lib.rs  main.rs  sampling.rs
